--- a/public/view.html
+++ b/public/view.html
@@ -10,7 +10,14 @@
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
-	<script defer src='/build/bundle.js'></script>
+    <script defer src='/build/bundle.js'></script>
+    <style>
+          body, html{
+	overflow-y: hidden;
+	overflow-x: hidden;
+	height: 100%;
+  }
+    </style>
 </head>
 
 <body>
